# tracer-api

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.dist  Dockerfile_tests  Performance tests.odg  README.md  accountsdb-plugin-config.json  docker-compose-graph.yml  docker-compose-test.yml  entrypoint.sh  id.json  performace.odg  prometheus.yml  server.json  start_tracer.sh
.buildkite/: pipeline.yml
.buildkite/steps/: build-image.sh  deploy-test.sh  publish-image.sh  pull-images.sh  revision.sh  upload-image.sh
.github/workflows/: ci.yaml  query-account.yaml  transactions-latency.yaml
ci/: accountsdb-plugin-config.json
clickhouse/: Dockerfile
docs/: EnvSchema.odg  Tracer-API workflow.odg
dumping-delay-meter/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  hardhat.config.js  package.json  server.json
dumping-delay-meter/contracts/: TestContract.sol  TestFactoryContract.sol
dumping-delay-meter/scripts/: deploy.js
dumping-delay-meter/src/: contracts.rs  event_monitor.rs  generator.rs  main.rs
neon-rpc/: filter.js  nginx.conf
neon-tracer/: Cargo.toml
neon-tracer/src/: config.rs  main.rs  metrics.rs  opcodes.rs
neon-tracer/src/api_client/: client.rs  config.rs  mod.rs  models.rs
neon-tracer/src/data_source/: mod.rs  neon_api.rs  tracer_db.rs
neon-tracer/src/service/: eip1898.rs  geth.rs
neon-tracer/src/types/: geth.rs  mod.rs  open_eth.rs
neon-validator/: Dockerfile  accountsdb-plugin-config.json
nginx/: Dockefile  filter.js  nginx.conf
src/: account_ordering.rs  config.rs  db.rs  evm_runtime.rs  main.rs  metrics.rs  postgres_db.rs  stop_handle.rs  syscall_stubs.rs
src/api_client/: client.rs  config.rs  errors.rs  models.rs
src/data_source/: mod.rs  neon_api.rs  neon_cli.rs  tracer_db.rs
src/js/: mod.rs
src/neon/: account_storage.rs  diff.rs  mod.rs  neon_cli.rs  provider.rs  tracer.rs  tracer_core.rs
src/service/: eip1898.rs  geth.rs  mod.rs  neon_proxy.rs
src/types/: geth.rs  mod.rs  open_eth.rs  primitives.rs
src/v1/geth/types/: trace.rs
src/v1/types/: mod.rs  trace.rs
test-framework/: Cargo.toml
test-framework/framework/: Cargo.toml
test-framework/framework/src/: db_types.rs  extension.rs  framework.rs  indexer.rs  lib.rs
test-framework/framework/tests/: transaction.rs
test-framework/load-tests/: Cargo.toml
test-framework/load-tests/src/: log.rs  main.rs  params.rs  query_account.rs  transaction_latency.rs  utils.rs
test-framework/src/: db_types.rs  framework.rs
test-framework/tests/: transaction.rs
tests/: .dockerignore  .gitignore  Dockerfile  README.md  deploy_contracts_make_transactions.py  entrypoint.sh  parse_args.py  query_transaction.sh  requirements.txt
tests/common/: compile.py  web3_connection.py
tests/helpers/: __init__.py  helper.py  requests_helper.py  soft_assertion.py  test_helper.py  testing_parameterization.py
tests/resources/contracts/: Contract_1.sol  Contract_2.sol  SimpleFund.sol
tests/resources/requests/gETH/: debug_trace_call_default.json  debug_trace_call_filter_js.json  debug_trace_transaction_default.json  debug_trace_transaction_disable_stack.json  debug_trace_transaction_disable_storage.json  debug_trace_transaction_enable_memory.json  debug_trace_transaction_filter_js.json
tests/resources/requests/open_eth/: trace_block.json  trace_call_default.json  trace_call_no_statediff.json  trace_call_no_trace.json  trace_call_no_vmtrace.json  trace_replay_block_transactions.json  trace_replay_transaction.json  trace_transaction.json
tests/resources/schemas/: call_level_debug_trace_transaction_default.json  call_level_debug_trace_transaction_disable_storage.json  call_level_trace_call_default.json  call_level_trace_call_no_satediff.json  call_level_trace_call_no_trace.json  call_level_trace_call_no_vmtrace.json  call_level_trace_replay_block_transactions.json  call_level_trace_replay_transaction.json  call_level_trace_transaction.json  deploy_debug_trace_call_default.json  deploy_debug_trace_call_filter_js.json  deploy_debug_trace_transaction_disable_stack.json  deploy_debug_trace_transaction_enable_memory.json  deploy_trace_call_default.json  deploy_trace_call_no_statediff.json  deploy_trace_call_no_trace.json  deploy_trace_call_no_vmtrace.json  deploy_trace_replay_block_transactions.json  deploy_trace_replay_transaction.json  deploy_trace_transaction.json  set_value_debug_trace_transaction_disable_stack.json  set_value_debug_trace_transaction_enable_memory.json  set_value_trace_call_default.json  set_value_trace_call_no_statediff.json  set_value_trace_call_no_trace.json  set_value_trace_call_no_vmtrace.json  set_value_trace_replay_block_transactions.json  set_value_trace_replay_transaction.json  set_value_trace_transaction.json
tests/tests/: conftest.py  test_eth_call.py  test_eth_get_code.py  test_get_balance.py  test_get_logs.py  test_get_storage_at.py  test_get_transaction_count.py  test_geth_traces.py  test_open_eth_traces.py
tests/utils/: log_report.py
