[workspace]

members = [
    "dumping-delay-meter",
    "neon-tracer",
    "test-framework/framework",
    "test-framework/load-tests",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1.0.104"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
rand = "0.8.5"
web3 = "0.19"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.73"
arrayref = "0.3.7"
secp256k1 = { version = "0.27", features = ["rand"] }
neon-cli-lib = { git = "https://github.com/neonlabsorg/neon-evm", branch = "develop", default_features = false, package = "neon-lib" }

# for evm-loader
mpl-token-auth-rules = "=1.4.1"
