[package]
name = "dumping-delay-meter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dumping-delay-meter"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.66"
web3 = "0.18.0"
tokio-postgres = "0.7.7"
tokio = "1.25.0"
log = "0.4.17"
serde_json = "1.0.94"
futures = "0.3.25"
secp256k1 = "0.21.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-log = "0.1"
arrayref = "0.3.6"
rand = "0.8.5"
postgres-types = "0.2.5"
