[package]
name = "dumping-delay-meter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dumping-delay-meter"
path = "./src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
web3.workspace = true
tokio-postgres = "0.7.7"
tokio.workspace = true
serde_json.workspace = true
futures.workspace = true
secp256k1.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
arrayref.workspace = true
rand.workspace = true
postgres-types = "0.2.5"
