[package]
name = "neon-tracer"
version = "0.2.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.18", features = ["server", "macros"] }
tokio.workspace = true
serde.workspace = true
rustc-hex = "2.1"
# TODO: Remove:
log = "0.4"
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
evm-loader = { git = "https://github.com/neonlabsorg/neon-evm", branch = "develop", default_features = false, features = ["tracing"]}
neon-cli-lib.workspace = true
solana-sdk = "=1.14"
solana-cli-config = "=1.14"
hex.workspace = true
arrayref = "0.3.6"
serde_json.workspace = true
serde_yaml = "0.9.14"
lazy_static = "1.4"
thiserror = "1.0"
warp = "0.3.2"
web3.workspace = true
prometheus = { version = "0.9", features = ["process"] }
futures = "0.3.25"
futures-util = "0.3.25"
async-trait = "0.1.59"
ethnum = { version = "1", default_features = false, features = [ "serde" ] }
rand.workspace = true
reqwest.workspace = true
