[package]
name = "neon-test-framework"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
tokio.workspace = true
web3.workspace = true
rand.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
secp256k1 = { version = "0.27", features = ["rand"] }
clickhouse = { version = "0.11", features = ["time"] }
async-trait.workspace = true
time = "0.3"
neon-cli-lib.workspace = true
