[package]
name = "neon-load-tests"
version = "0.2.0-dev"
edition = "2021"
description = "Runs performance and load tests"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
clap = { version = "4", features = ["derive"] }
time = "0.3"
neon-test-framework = { path = "../framework"}
